--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-elements": "2.2.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
@@ -30,6 +31,7 @@
     "react-redux": "7.2.0",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
+    "redux-persist": "5.9.1",
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
