--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "expo": "41",
     "expo-constants": "~10.1.3",
+    "expo-notifications": "~0.11.6",
+    "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -24,6 +26,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "0.17.7",
     "react-navigation": "4",
     "react-navigation-drawer": "^2.7.2",
